--- a/app/views/form_section/_show_form_section.html.erb
+++ b/app/views/form_section/_show_form_section.html.erb
@@ -8,7 +8,7 @@
       </div>
       <% end %>
 
-      <% (section.fields.select{|field| field.visible?}).each do |field| %>
+      <% (section.fields.select{|field| field.showable?}).each do |field| %>
         <%= render :partial => field_template_path(field, true),  :locals=>{:field => field, :formObject=>formObject, :form_group_name => form_group_name, :display_audio_delete_checkbox => false} %>
       <% end %>
     </fieldset>
