--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -22,6 +22,20 @@
     <%= resource_edit_field @user, 'password', 'login.password.label', 'password_field', true %>
     <%= resource_edit_field @user, 'password_confirmation', 'login.password.re_enter', 'password_field', true %>
 
+    <% if !trying_to_edit_ourself && can?(:edit, @user) %>
+    <div class="row">
+      <div class="medium-3 columns">
+        <span class="tool-tip-label">
+          <%= f.label :is_manager, t("user.manager"), :class=>'key inline' %>
+        </span>
+      </div>
+      <div class="medium-8 columns">
+        <%= f.check_box :is_manager, {}, "true", "false" %>
+      </div>
+      <div class="medium-1 columns"></div>
+    </div>
+    <% end %>
+
     <% if !trying_to_edit_ourself %>
       <div class="row">
         <div class="medium-3 columns">
