--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -27,6 +27,7 @@
     <div class="large-8 medium-8 columns side-tab-content-container">
       <div class="side-tab-content">
         <%= hidden_field_tag('incident[base_revision]', @incident._rev) %>
+        <%= hidden_field_tag('incident[record_state]', @incident.record_state) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
         <% end %>
