added TODOs regarding refactoring field translation logic

--- a/app/views/form_section/_field_display_basic.html.erb
+++ b/app/views/form_section/_field_display_basic.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="medium-4 columns">
+    <%# TODO - need to refactor this translation logic %>
     <label class="key <%= field.name %>"><%= t(field.name, :default => field.display_name) %></label>
   </div>
   <div class="medium-8 columns">
