fixed Name translations

--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -1,5 +1,5 @@
-<%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
-<%= resource_edit_field(object, 'description', 'description', 'text_area') %>
+<%= resource_edit_field(object, 'name', 'report.name', 'text_field', true) %>
+<%= resource_edit_field(object, 'description', 'report.description', 'text_area') %>
 <%# Modules input %>
 <div class="row">
   <div class="medium-3 columns">
