--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -7,8 +7,8 @@
     <div class="clearfix"></div>
     <fieldset class="no-border">
 
-      <%= resource_edit_field(@role, 'name', 'name', 'text_field', true) %>
-      <%= resource_edit_field(@role, 'description', 'description', 'text_area') %>
+      <%= resource_edit_field(@role, 'name', 'role.name', 'text_field', true) %>
+      <%= resource_edit_field(@role, 'description', 'role.description', 'text_area') %>
 
       <div class="row">
         <div class="medium-3 columns">
