--- a/app/views/user_groups/_editable.html.erb
+++ b/app/views/user_groups/_editable.html.erb
@@ -1,2 +1,2 @@
-<%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
-<%= resource_edit_field(object, 'description', 'description', 'text_area') %>
+<%= resource_edit_field(object, 'name', 'user_group.name', 'text_field', true) %>
+<%= resource_edit_field(object, 'description', 'user_group.description', 'text_area') %>
