--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -31,7 +31,7 @@
             <% end %>
             <div class="row name-field">
               <div class="medium-3 columns">
-                <%= f.label :name, t("name", :locale => I18n.default_locale), :class => 'key inline' %>
+                <%= f.label :name, t("form_section.name", :locale => I18n.default_locale), :class => 'key inline' %>
               </div>
               <div class="medium-9 columns">
                 <%= f.text_field "name_#{I18n.default_locale}", :id => "form_section_name", required: '' %>
