--- a/app/views/primero_modules/_editable.html.erb
+++ b/app/views/primero_modules/_editable.html.erb
@@ -1,5 +1,5 @@
-<%= resource_edit_field(object, 'name', 'name', 'text_field', true) %>
-<%= resource_edit_field(object, 'description', 'description', 'text_area') %>
+<%= resource_edit_field(object, 'name', 'primero_module.name', 'text_field', true) %>
+<%= resource_edit_field(object, 'description', 'primero_module.description', 'text_area') %>
 <div class="row">
   <div class="medium-3 columns">
     <span class="tool-tip-label">
