SL-24: Added padding to select boxes

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -45,6 +45,7 @@ select:not([class^="ui-datepicker-"]), select:hover:not([class^="ui-datepicker-"
   color: $grey_color;
   font-size: $thirteen_px;
   -moz-appearance: none;
+  padding-right: 20px;
 
   &.small {
     height: 1.5rem;
