--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -19,6 +19,16 @@
         </div>
       </div>
     </p>
+    <p class="chkbox_hide_on_view_page">
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= fld.label :hide_on_view_page, t("hide_on_view_page"), :class => 'key inline' %>
+        </div>
+        <div class="medium-9 columns">
+          <%= fld.check_box :hide_on_view_page?, {}, "true", "false" %>
+        </div>
+      </div>
+    </p>
     <div class="clearfix"></div>
     <div class="translation_lang_panel">
       <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true }%>
