--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -40,7 +40,7 @@
                              }
           %>
 
-          <% (subform_section.fields.select {|field| field.visible? }).each do |field| %>
+          <% (subform_section.fields.select {|field| field.showable? }).each do |field| %>
             <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
           <% end %>
           </fieldset>
