converted fonts to base64, removed font awesome in favor of loading only required fonts

--- a/app/views/home/_caseload.html.erb
+++ b/app/views/home/_caseload.html.erb
@@ -15,10 +15,7 @@
           </th>
           <th>
             <%= t("dashboard.missed_cases") %>
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-exclamation fa-stack-1x fa-inverse"></i>
-            </span>
+            <i class="fa fa-exclamation"></i>
           </th>
        </tr>
       </thead>
