--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -29,6 +29,22 @@
         </div>
       </div>
     </p>
+    <% if @field.type == 'subform' %>
+    <p>
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= fld.label :subform_sort_by, t("subform_sort_by"), :class => 'key inline' %>
+        </div>
+        <div class="medium-9 columns">
+          <%= fld.select "subform_sort_by",
+              options_for_select(@field.subform_section.fields.select{|sf| sf.type == "date_field"}
+                    .map{|sf| [sf.display_name, sf.name] }, @field.subform_sort_by || ''), {},
+                    required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
+                    class: "chosen-select-or-new", id: "form_section_form_group_name" %>
+        </div>
+      </div>
+    </p>
+    <% end %>
     <div class="clearfix"></div>
     <div class="translation_lang_panel">
       <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true }%>
