--- a/app/views/child_media/manage_photos.html.erb
+++ b/app/views/child_media/manage_photos.html.erb
@@ -1,9 +1,8 @@
 <h1><%= link_to t("children.label"), children_path %> &gt; <%= link_to @child.name, child_path(@child) %> (<%= @child.short_id %>) &gt; <%= t("child.manage_photos") %></h1>
 <script type="text/javascript">
-$(function() {
+<%= content_for :page_scripts do %>
   window.Photos.refresh(<%= @photos_details.to_json.html_safe %>);
-});
-</script>
+<% end %>
 <div class="clearfix"></div>
 <div class="manage_photos">
   <div class="thumbnails">
