--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,9 @@
   <%= favicon_link_tag('favicon-16x16.png?v=3') %>
   <%= stylesheet_link_tag "application" %>
   <%= yield :stylesheet %>
-  <script>
-    window._primero = {
-      model_object: "<%= controller.controller_name.singularize %>",
-      current_action: "<%= controller.action_name %>",
-      discard_message: "<%= t('messages.record_navigation_confirmation_message', default: 'Discard unsaved changes?') %>"
-    };
-  </script>
   <%= yield :pagination_details %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tag %>
-  <%= yield :javascript %>
-  <%= javascript_tag do %>
-      I18n.defaultLocale = "<%= I18n.default_locale %>";
-      I18n.locale = "<%= I18n.locale %>";
-      I18n.fallbacks = true;
-  <% end %>
+  <% #javascript_include_tag 'plugins/jquery-1.7.1.min' %>
 </head>
 <body class="<%= @body_class %>">
   <!-- Header -->
@@ -82,12 +69,32 @@
 
 <%= render 'exports/password_prompt' %>
 <div class="spacer"></div>
-<script>$(document).foundation();</script>
 <div class="loading-screen">
   <div class="ls-icon">
     <i class="fa fa-refresh fa-spin"></i>
   </div>
   <div class="ls-bg"></div>
 </div>
+<script>
+  window._primero = {
+    model_object: "<%= controller.controller_name.singularize %>",
+    current_action: "<%= controller.action_name %>",
+    discard_message: "<%= t('messages.record_navigation_confirmation_message', default: 'Discard unsaved changes?') %>",
+    Views: {}
+  };
+</script>
+<%= javascript_include_tag "application" %>
+<%= yield :javascript %>
+<%= javascript_tag do %>
+    I18n.defaultLocale = "<%= I18n.default_locale %>";
+    I18n.locale = "<%= I18n.locale %>";
+    I18n.fallbacks = true;
+<% end %>
+<script>$(document).foundation();</script>
+<script>
+  $(document).ready(function(){
+    <%= yield :page_scripts %>
+  });
+</script>
 </body>
 </html>
