--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,9 +17,10 @@
               <% if current_user_name==nil or can? :manage, FormSection %>
                 <li><%= link_to t("navigation.forms"), form_sections_path, class: current_menu("forms") %></li>
               <% end %>
-              <%# if can? :read, User or can? :show, Role %>
-              <%# TODO: This auth check will need to be tightened up. %>
-              <% if can? :edit, Role or can? :edit, User%>
+              <%# We use UserGroup here instead of User because all users have access to manage themselves. %>
+              <%# Therefore... can? :edit, User always returns true %>
+              <%# TODO - verify that functionality is expected %>
+              <% if can? :edit, Role or can? :edit, UserGroup%>
                 <li><%= link_to t("navigation.users"), users_path, class: current_menu("setting") %></li>
               <% end %>
               <% if can?(:read, Device) or can?(:read, Replication) %>
