--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -24,7 +24,7 @@
               <fieldset class="no-border">
                 <div class="row">
                   <div class="medium-4 columns">
-                    <%= f.label :name, t("name"), :class=>'key'  %>
+                    <%= f.label :name, t("role.name"), :class=>'key'  %>
                   </div>
                   <div class="medium-8 columns">
                     <span class="value"><%= @role.name %></span>
