--- a/app/views/primero_programs/show.html.erb
+++ b/app/views/primero_programs/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :resource_show_fields do %>
-  <%= resource_show_field @primero_program, 'name', 'name' %>
-  <%= resource_show_field @primero_program, 'description', 'description' %>
+  <%= resource_show_field @primero_program, 'name', 'primero_program.name' %>
+  <%= resource_show_field @primero_program, 'description', 'primero_program.description' %>
   <%= resource_show_field @primero_program, 'start_date', 'primero_program.start_date' %>
   <%= resource_show_field @primero_program, 'end_date', 'primero_program.end_date' %>
 <% end %>
