--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,10 @@
       <% end %>
     </div>
     <div id="sidebar" class="large-3 small-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @recently_flagged, model: Child %>
+      <%= render 'flagged_by_me', flagged_by_me: @flagged_by_me, model: Child %>
+      <% unless @display_manager_dashboard %>
+        <%= render 'flagged_by_others', flagged_by_others: @flagged_by_others, model: Child %>
+      <% end %>
     </div>
   </div>
   <% end %>
@@ -56,7 +59,7 @@
       <%= render 'open_incidents', open_incidents: @open_incidents %>
     </div>
     <div id="sidebar" class="large-3 small-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @incidents_recently_flagged, model: Incident %>
+      <%= render 'flagged_by_me', flagged_by_me: @incidents_recently_flagged, model: Incident %>
     </div>
   </div>
   <% end %>
@@ -67,7 +70,7 @@
       <%= render 'open_gbv_incidents', open_incidents: @open_gbv_incidents %>
     </div>
     <div id="sidebar" class="large-3 small-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @gbv_incidents_recently_flagged, model: Incident %>
+      <%= render 'flagged_by_me', flagged_by_me: @gbv_incidents_recently_flagged, model: Incident %>
     </div>
   </div>
   <% end %>
