--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,8 +36,13 @@
   <% if @display_cases_dashboard %>
   <div class="row collapse">
     <div id="content" class="large-9 small-9 columns">
-      <%= render 'recent_activities', recent_activities: @recent_activities, model: Child %>
-      <%= render 'scheduled_activities', scheduled_activities: @scheduled_activities, model: Child %>
+      <%= render 'case_counts',
+        new_cases: @new_cases,
+        total_cases: @total_cases
+
+      %>
+
+
       <% if @display_manager_dashboard %>
         <%= render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
       <% else %>
