added back Show Edit Delete links on Role index page

--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -45,6 +45,8 @@
         </div>
         <div class="medium-8 columns">
           <span class="value value_form">
+            <% #TODO - BEGIN SL-265 CHANGES %>
+            <% #TODO - END SL-265 CHANGES %>
             <% translated_permissions.each do |group_name, permissions| %>
               <span class="section">
                 <span class="title"><%= t("permissions.#{group_name}") %></span>
