--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -66,6 +66,8 @@
                   </div>
                   <div class="medium-8 columns">
                     <span class="value value_form">
+                      <% #TODO - BEGIN SL-265 CHANGES %>
+                      <% #TODO - END SL-265 CHANGES %>
                       <% translated_permissions.each do |group_name, permissions| %>
                           <span class="section section-show">
                             <span class="title"><%= t("permissions.#{group_name}") %></span>
