--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,8 +38,8 @@
     <div id="content" class="large-9 small-9 columns">
       <%= render 'case_counts',
         new_cases: @new_cases,
-        total_cases: @total_cases
-
+        total_cases: @total_cases,
+        model: Child
       %>
 
 
