--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -67,11 +67,20 @@
                   <div class="medium-8 columns">
                     <span class="value value_form">
                       <% #TODO - BEGIN SL-265 CHANGES %>
+                      <% translated_permissions_list(@role.permissions_list).each do |permission| %>
+                        <span class="section section-show">
+                          <span class="title"><%= permission[:resource_translated] %></span>
+                          <% permission[:actions_translated].each do |action| %>
+                            <label> <%= action[:value] %> </label>
+                          <% end %>
+                        </span>
+                      <% end %>
                       <% #TODO - END SL-265 CHANGES %>
                       <% translated_permissions.each do |group_name, permissions| %>
                           <span class="section section-show">
                             <span class="title"><%= t("permissions.#{group_name}") %></span>
                             <% Hash[*permissions.flatten].values.each do |permission| %>
+                              <%# binding.pry %>
                               <label><%= f.check_box :permissions, {:id => permission.dehumanize, :name => "role[permissions][]", :disabled => "disabled"}, permission, "" %>
                                 <%= t("permissions.permission.#{permission}") %></label>
                               <% end %>
