--- a/app/views/home/_case_count_new_totals.html.erb
+++ b/app/views/home/_case_count_new_totals.html.erb
@@ -1,5 +1,5 @@
 <td><%= I18n.translate('dashboard.count_records_total',
-                   case_count({name: :records, stat: :total}, stats, model)).html_safe %>
+                   case_count({name: :records, stat: :total, filter: index_filters(['owned_by'])}, stats, model)).html_safe %>
 <%= I18n.translate('dashboard.count_records_new',
-                   case_count({name: :records, stat: :new, filter: "?scope[child_status]=list||Open&scope[last_updated_by]=neg||#{current_user.user_name}"}, stats, model)).html_safe %>
+                   case_count({name: :records, stat: :new, filter: index_filters(['new', 'child_status', 'owned_by'])}, stats, model)).html_safe %>
 </td>
