--- a/app/views/home/_case_count_referred.html.erb
+++ b/app/views/home/_case_count_referred.html.erb
@@ -1,5 +1,6 @@
 <td><%= I18n.translate('dashboard.count_referrals_total',
-                   case_count({name: :referred, stat: :total}, stats, model)).html_safe %>
+                   case_count({name: :referred, stat: :total, filter: index_filters(['child_status', 'referred_users'])}, stats, model)).html_safe %>
 <%= I18n.translate('dashboard.count_referrals_new',
-                   case_count({name: :referred, stat: :new, filter: "?scope[child_status]=list||Open&scope[last_updated_by]=neg||#{current_user.user_name}"}, stats, model)).html_safe %>
+                   case_count({name: :referred, stat: :new,
+                               filter: index_filters(['child_status', 'new', 'referred_users'])}, stats, model)).html_safe %>
 </td>
